--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "firebase-tools": "^7.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-text-truncate": "^0.15.0"
   },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
